Preparacion de repo

--- a/perfil/config.cfg
+++ b/perfil/config.cfg
@@ -7,6 +7,10 @@ autostart = 0
 autoupdate = 0
 caja=0
 cobra=0
+motor=sqlite3
+
+[sqlite3]
+archivo=pyventa.sqlite
 
 [empresa]
 slogan = Todo lo que necesitas.
