Latest stable version Pyventa

--- a/perfil/config.cfg
+++ b/perfil/config.cfg
@@ -5,20 +5,24 @@ estilo = elegant.css
 resolucion = elegant
 autostart = 0
 autoupdate = 0
-caja=0
+caja=1
 cobra=0
+motor=sqlite3
+
+[sqlite3]
+archivo=pyventa.sqlite
 
 [empresa]
 slogan = Todo lo que necesitas.
-email = ventas@empresa.com
+email = ventas@tuempresa.com
 telefono = 123456789
 direccion = Domicilio fisico
 rfc = XHG12320FG1
-ciudad = Ciudad Por Defecto
-pagina = www.empresa.com
-nombre = EMPRESA SIN REGISTRO
+ciudad = Ciudad
+pagina = www.pyventa.com
+nombre = Pyventa
 estado = Estado
-cp = 
+cp = 99999
 logo=/usr/share/icons/pyventa.png
 
 [respaldo]
@@ -52,8 +56,8 @@ activo = 1
 host = localhost
 db = tpv
 user = admin
-pass = a2lt
-version=2.340
+pass = *****
+version=2.360
 
 [ticket]
 default = 1
